fixed the croppped image

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5, p {
 .awful-selfie{
     background: url(../img/bg.jpg);
     width: 300px;
-    height: 300px;
+    height: 700px;
     background-size: 100% auto;
     background-repeat: no-repeat;
 }
